dual/app/Kefico/Dsa.Kefico.Cp/bin/x86/nmc2.h




typedef struct NMC_AXES_EXPR{
	short nBusy[8];
	short nError[8];
	short nNear[8];
	short nPLimit[8];
	short nMLimit[8];

	short nAlarm[8];
	short nEmer[2];
	short nSwPLimit[8];
	short nInpo[8];
	short nHome[8];

	short nEncZ[8];
	short nOrg[8];
	short nSReady[8];

	short nContStatus[2];			// 연속 보간 실행 여부(1:Run, 0:Stop)
	short nDummy[6];
	short nSwMLimit[8]; 

	int lEnc[8];
	int lCmd[8];
	double dEnc[8];
	double dCmd[8];
	char dummy[4];
}NMCAXESEXPR,*PNMCAXESEXPR;


typedef struct NMC_HOME_FLAG{
    short nSrchFlag[8];
    short nStatusFlag[8];
}NMCHOMEFLAG,*PNMCHOMEFLAG;


short WINAPI nmc_AllAxisStop(short nNmcNo, short nMode);

short WINAPI nmc_MultiAxisStop(short nNmcNo,short nAxisCount,short *pnAxisSelect,short nMode);

//------------------------------------------------------------------------------
short WINAPI nmc_GetAxesExpress(short nNmcNo, PNMCAXESEXPR  pNmcData);

short WINAPI nmc_GetStopInfo(short nNmcNo, short *pnStopInfo);

//------------------------------------------------------------------------------
short WINAPI nmc_SetCmdPos(short nNmcNo, short nAxisNo, double dPos);

short WINAPI nmc_SetEncPos(short nNmcNo, short nAxisNo, double dPos);

short WINAPI nmc_SetCmdEncPos(short nNmcNo, short nAxisNo, double dPos);

//------------------------------------------------------------------------------
short WINAPI nmc_HomeMove(short nNmcNo, short nAxisNo, short nHomeMode,short nHomeEndMode,double dOffset, short nReserve);

short WINAPI nmc_GetHomeStatus(short nNmcNo, PNMCHOMEFLAG pHomeFlag);

short WINAPI nmc_SetHomeSpeed(short nNmcNo, short nAxisNo,
							  double dHomeSpeed0,double dHomeSpeed1,double dHomeSpeed2);

short WINAPI nmc_SetHomeSpeedEx(short nNmcNo, short nAxisNo,
							  double dHomeSpeed0,double dHomeSpeed1,double dHomeSpeed2,double dOffsetSpeed);

short WINAPI nmc_SetHomeSpeedAccDec(short nNmcNo, short nAxisNo, double dHomeSpeed0, double dStart0, double dAcc0, double dDec0, double dHomeSpeed1, double dStart1, double dAcc1, double dDec1,
							  double dHomeSpeed2, double dStart2, double dAcc2, double dDec2, double dOffsetSpeed, double dOffsetStart, double dOffsetAcc, double dOffsetDec);

short WINAPI nmc_HomeDoneCancel(short nNmcNo, short nAxisNo);

short WINAPI nmc_SetHomeDelay(short nNmcNo,int nHomeDelay);

//------------------------------------------------------------------------------
short WINAPI nmc_Interpolation2Axis(short nNmcNo, short nAxisNo0, double dPos0,
									short nAxisNo1, double dPos1,short nOpt);

short WINAPI nmc_Interpolation3Axis(short nNmcNo, short nAxisNo0, double dPos0,
			short nAxisNo1, double dPos1, short nAxisNo2, double dPos2,short nOpt);

//------------------------------------------------------------------------------
short WINAPI nmc_InterpolationArc(short nNmcNo, short nAxisNo0, short nAxisNo1, 
								  double dCenter0,double dCenter1, double dAngle,short nOpt);


	short WINAPI nmc_InterpolationRelCircle (short nNmcNo, short nAxisNo0, double CenterPulse0,double EndPulse0, // 사용안함
				short nAxisNo1, double CenterPulse1, double EndPulse1,short nDir);	// 사용안함
	short WINAPI nmc_InterpolationAbsCircle (short nNmcNo, short nAxisNo0, double CenterPulse0,double EndPulse0, // 사용안함
				short nAxisNo1, double CenterPulse1, double EndPulse1,short nDir); // 사용안함

//------------------------------------------------------------------------------
short WINAPI nmc_SetCurrentOn (short nNmcNo, short nAxisNo,short nOut);

short WINAPI nmc_SetServoOn (short nNmcNo, short nAxisNo,short nOut);

short WINAPI nmc_SetAlarmResetOn(short nNmcNo, short nAxisNo,short nOut);

short WINAPI nmc_SetDccOn (short nNmcNo, short nAxisNo,short nOut);

//------------------------------------------------------------------------------
short WINAPI nmc_SetMultiCurrentOn(short nNmcNo, short nAxisCount,short *pnAxisSelect,short nOut);

short WINAPI nmc_SetMultiServoOn(short nNmcNo, short nAxisCount,short *pnAxisSelect,short nOut);

short WINAPI nmc_SetMultiDccOn(short nNmcNo, short nAxisCount,short *pnAxisSelect,short nOut);

//------------------------------------------------------------------------------
short WINAPI nmc_SetEnableNear(short nNmcNo, short nAxisNo,short nUse);

short WINAPI nmc_SetEnableEncZ(short nNmcNo, short nAxisNo,short nMode);

short WINAPI nmc_SetLimitStopMode (short nNmcNo, short nAxisNo,short nStopMode);

short WINAPI nmc_SetBusyOffMode(short nNmcNo, short nAxisNo, short nMode);


//------------------------------------------------------------------------------
short WINAPI nmc_SetRingCountMode (short nNmcNo, short nAxisNo,int lMaxPulse,int lMaxEncoder, short nRingMode);

short WINAPI nmc_MoveRing (short nNmcNo, short nAxisNo,double dPos, short nMoveMode);

	//------------------------------------------------------------------------------
	short WINAPI nmc_SetSyncSetup(short nNmcNo, short nMainAxisNo,  // 사용안함
								short nSubAxisNoEnable0, short nSubAxisNoEnable1, short nSubAxisNoEnable2); // 사용안함
	short WINAPI nmc_SetSync(short nNmcNo, short nGroupNo,  // 사용안함
								short *pnSyncGrpList0, short *pnSyncGrpList1); // 사용안함
	short WINAPI nmc_SyncFree(short nNmcNo, short nGroupNo); // 사용안함
//------------------------------------------------------------------------------
short WINAPI nmc_GetMDIOInput(short nNmcNo, short *pnInStatus);

short WINAPI nmc_GetMDIOOutput(short nNmcNo, short *pnOutStatus);

short WINAPI nmc_SetMDIOOutput(short nNmcNo, short *pnOutStatus);

short WINAPI nmc_SetMDIOOutPin(short nNmcNo, short nPinNo, short nOutStatus);

short WINAPI nmc_SetMDIOOutTogPin(short nNmcNo, short nPinNo);

short WINAPI nmc_SetMDIOOutPins(short nNmcNo, short nCount, short *pnPinNo, short *pnStatus);

short WINAPI nmc_SetMDIOOutTogPins(short nNmcNo, short nCount, short *pnPinNo);


	short WINAPI nmc_GetMDIOInPin(short nNmcNo, short nPinNo,short *pnInStatus); //사용안함
	short WINAPI nmc_SetMDIOOutputTog(short nNmcNo, short nBitNo); //사용안함
	short WINAPI nmc_GetMDIOInputBit(short nNmcNo, short nBitNo,short *pnInStatus); //사용안함
	short WINAPI nmc_SetMDIOOutputBit(short nNmcNo, short nBitNo, short nOutStatus); //사용안함
	short WINAPI nmc_SetMDIOOutputAll(short nNmcNo,  short *pnOnBitNo, short *pnOffBitNo); //사용안함
	short WINAPI nmc_SetMDIOOutputTogAll(short nNmcNo, short *pnBitNo); //사용안함
	short WINAPI nmc_GetMDIOInput32(short nNmcNo, int *plInStatus); //사용안함
	short WINAPI nmc_GetMDIOOutput32(short nNmcNo, int *plOutStatus); //사용안함
	short WINAPI nmc_SetMDIOOutput32(short nNmcNo, int lOutStatus); //사용안함

short WINAPI nmc_SetDIOOutPin(short nNmcNo, short nPinNo, short nOutStatus);

short WINAPI nmc_SetDIOOutTogPin(short nNmcNo, short nPinNo);

short WINAPI nmc_SetDIOOutPins(short nNmcNo, short nCount, short *pnPinNo, short *pnStatus);

short WINAPI nmc_SetDIOOutTogPins(short nNmcNo, short nCount, short *pnPinNo);


	short WINAPI nmc_GetDIOInPin(short nNmcNo, short nPinNo,short *pnInStatus); //사용안함