dual/app/Kefico/Dsa.Kefico.Cp/Dsu.Driver.PaixWrapper/nmc2.cs


        [DllImport("NMC2.dll", EntryPoint = "nmc_AllAxisStop")]
        public static extern short AllAxisStop(short nNmcNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_MultiAxisStop")]
        public static extern short MultiAxisStop(short nNmcNo, short nCount, short[] pnAxisSelect, short nMode);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetAxesExpress")]
        public static extern short GetAxesExpress(short nNmcNo, out NMCAXESEXPR pNmcData);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetStopInfo")]
        public static extern short GetStopInfo(short nNmcNo, short[] pnStopMode);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetCmdPos")]
        public static extern short SetCmdPos(short nNmcNo, short nAxisNo, double dPos);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEncPos")]
        public static extern short SetEncPos(short nNmcNo, short nAxisNo, double dPos);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetCmdEncPos")]
        public static extern short SetCmdEncPos(short nNmcNo, short nAxisNo, double dPos);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_HomeMove")]
        public static extern short HomeMove(short nNmcNo, short nAxisNo, short nHomeMode, short nHomeEndMode, double dOffset, short nReserve);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetHomeStatus")]
        public static extern short GetHomeStatus(short nNmcNo, out NMCHOMEFLAG pHomeFlag);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetHomeSpeed")]
        public static extern short SetHomeSpeed(short nNmcNo, short nAxisNo,
                                  double dHomeSpeed0, double dHomeSpeed1, double dHomeSpeed2);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetHomeSpeedEx")]
        public static extern short SetHomeSpeedEx(short nNmcNo, short nAxisNo,
                                  double dHomeSpeed0, double dHomeSpeed1, double dHomeSpeed2, double dOffsetSpeed);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetHomeSpeedAccDec")]
        public static extern short SetHomeSpeedAccDec(short nNmcNo, short nAxisNo, double dHomeSpeed0, double dStart0, double dAcc0, double dDec0, double dHomeSpeed1, double dStart1, double dAcc1, double dDec1,
                              double dHomeSpeed2, double dStart2, double dAcc2, double dDec2, double dOffsetSpeed, double dOffsetStart, double dOffsetAcc, double dOffsetDec);
        [DllImport("NMC2.dll", EntryPoint = "nmc_HomeDoneCancel")]
        public static extern short HomeDoneCancel(short nNmcNo, short nAxisNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetHomeDelay")]
        public static extern short SetHomeDelay(short nNmcNo, int nHomeDelay);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_Interpolation2Axis")]
        public static extern short Interpolation2Axis(short nNmcNo, short nAxisNo0, double dPos0,
                                        short nAxisNo1, double dPos1, short nOpt);
        [DllImport("NMC2.dll", EntryPoint = "nmc_Interpolation3Axis")]
        public static extern short Interpolation3Axis(short nNmcNo, short nAxisNo0, double dPos0,
                short nAxisNo1, double dPos1, short nAxisNo2, double dPos2, short nOpt);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_InterpolationArc")]
        public static extern short InterpolationArc(short nNmcNo, short nAxisNo0, short nAxisNo1,
                                      double dCenter0, double dCenter1, double dAngle, short nOpt);

        [DllImport("NMC2.dll", EntryPoint = "nmc_InterpolationRelCircle")]
        public static extern short InterpolationRelCircle(short nNmcNo, short nAxisNo0, double CenterPulse0, double EndPulse0,
                short nAxisNo1, double CenterPulse1, double EndPulse1, short nDir);
        [DllImport("NMC2.dll", EntryPoint = "nmc_InterpolationAbsCircle")]
        public static extern short InterpolationAbsCircle(short nNmcNo, short nAxisNo0, double CenterPulse0, double EndPulse0,
                short nAxisNo1, double CenterPulse1, double EndPulse1, short nDir);

        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetCurrentOn")]
        public static extern short SetCurrentOn(short nNmcNo, short nAxisNo, short nOut);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetServoOn")]
        public static extern short SetServoOn(short nNmcNo, short nAxisNo, short nOut);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetAlarmResetOn")]
        public static extern short SetAlarmResetOn(short nNmcNo, short nAxisNo, short nOut);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDccOn")]
        public static extern short SetDccOn(short nNmcNo, short nAxisNo, short nOut);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMultiCurrentOn")]
        public static extern short SetMultiCurrentOn(short nNmcNo, short nCount, short[] pnAxisSelect, short nOut);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMultiServoOn")]
        public static extern short SetMultiServoOn(short nNmcNo, short nCount, short[] pnAxisSelect, short nOut);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMultiAlarmOn")]
        public static extern short SetMultiAlarmOn(short nNmcNo, short nCount, short[] pnAxisSelect, short nOut);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMultiDccOn")]
        public static extern short SetMultiDccOn(short nNmcNo, short nCount, short[] pnAxisSelect, short nOut);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEnableNear")]
        public static extern short SetEnableNear(short nNmcNo, short nAxisNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEnableEncZ")]
        public static extern short SetEnableEncZ(short nNmcNo, short nAxisNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetLimitStopMode")]
        public static extern short SetLimitStopMode(short nNmcNo, short nAxisNo, short nStopMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetBusyOffMode")]
        public static extern short SetBusyOffMode(short nNmcNo, short nAxisNo, short nMode);

        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetRingCountMode")]
        public static extern short SetRingCountMode(short nNmcNo, short nAxisNo, int lMaxPulse, int lMaxEncoder, short nRingMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_MoveRing")]
        public static extern short MoveRing(short nNmcNo, short nAxisNo, double dPos, short nMoveMode);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSyncSetup")]
        public static extern short SetSyncSetup(short nNmcNo, short nMainAxisNo,
                                short nSubAxisNoEnable0, short nSubAxisNoEnable1, short nSubAxisNoEnable2);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetSync")]
        public static extern short SetSync(short nNmcNo, short nGroupNo, short[] pnSyncGrpList0, short[] pnSyncGrpList1);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SyncFree")]
        public static extern short SyncFree(short nNmcNo, short nGroupNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutPin")]
        public static extern short SetMDIOOutPin(short nNmcNo, short nPinNo, short nOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutTogPin")]
        public static extern short SetMDIOOutTogPin(short nNmcNo, short nPinNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutPins")]
        public static extern short SetMDIOOutPins(short nNmcNo, short nCount, short[] pnPinNo, short[] pnStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutTogPins")]
        public static extern short SetMDIOOutTogPins(short nNmcNo, short nCount, short[] pnPinNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMDIOInPin")]
        public static extern short GetMDIOInPin(short nNmcNo, short nPinNo, out short pnInStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMDIOInput")]
        public static extern short GetMDIOInput(short nNmcNo, short[] pnInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMDIOInputBit")]
        public static extern short GetMDIOInputBit(short nNmcNo, short nBitNo, out short pnInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMDIOOutput")]
        public static extern short GetMDIOOutput(short nNmcNo, short[] pnOutStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutput")]
        public static extern short SetMDIOOutput(short nNmcNo, short[] pnOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutputBit")]
        public static extern short SetMDIOOutputBit(short nNmcNo, short nBitNo, short nOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutputTog")]
        public static extern short SetMDIOOutputTog(short nNmcNo, short nBitNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutputAll")]
        public static extern short SetMDIOOutputAll(short nNmcNo, short[] pnOnBitNo, short[] pnOffBitNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutputTogAll")]
        public static extern short SetMDIOOutputTogAll(short nNmcNo, short[] pnBitNo);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMDIOInput32")]
        public static extern short GetMDIOInput32(short nNmcNo, out int plInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetMDIOOutput32")]
        public static extern short GetMDIOOutput32(short nNmcNo, out int plOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetMDIOOutput32")]
        public static extern short SetMDIOOutput32(short nNmcNo, int lOutStatus);

        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutPin")]
        public static extern short SetDIOOutPin(short nNmcNo, short nPinNo, short nOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutTogPin")]
        public static extern short SetDIOOutTogPin(short nNmcNo, short nPinNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutPins")]
        public static extern short SetDIOOutPins(short nNmcNo, short nCount, short[] pnPinNo, short[] pnStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutTogPins")]
        public static extern short SetDIOOutTogPins(short nNmcNo, short nCount, short[] pnPinNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOInPin")]
        public static extern short GetDIOInPin(short nNmcNo, short nPinNo, out short pnInStatus);
